# 10-4_bot-beta

./: CMakeLists.txt  bot-main
btools/: __init__.py  char_counter.py  command-add.sh  command_maker.py  removechars.py
clitools/: __init__.py  channeltools.py  command-add.sh  picker.py  texttools.py
cod/: __init__.py  cookiejar.py  ping.py
database/: commands.json
dbtools/: __init__.py  dbtools.py  legacy.py
inc/: MyClientClass.cpp  bot-functions.hpp  client.hpp  cmdUUID.hpp
src/: CMakeLists.txt  cmdUUID.cpp  main.cpp  onMessage.cpp  wordCount.cpp
